Update Kotlin Gradle plugin and Gradle wrapper
Updated Kotlin Gradle plugin to version 1.9.21 and Gradle wrapper to version 8.5.
Added compiler options for kapt and JavaCompile tasks.