@@ -10,7 +10,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.2.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.21"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.6"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.48'
         classpath 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1'
@@ -30,4 +30,7 @@ allprojects {
 }
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+tasks.withType(JavaCompile) {
+    options.forkOptions.jvmArgs << "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
 }
